<resources>
    <string name="app_name">ANUTree</string>
    <string name="title_activity_search_page1">SearchPage1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings for activity_create_post -->
    <string name="post_title">Post Title</string>
    <string name="post_price">Post Price</string>
    <string name="choose_image">Choose Image</string>
    <string name="post_desc">Post Description</string>
    <string name="create_post">Create Post</string>

</resources>